test_regress/t/t_forceable_unpacked_bad.out
%Error-UNSUPPORTED: t/t_forceable_unpacked_bad.v:8:8: Unsupported: Forcing unpacked arrays of non-bitwise inner type: t__DOT__unpacked
    8 |   real unpacked[1]  /*verilator forceable*/;
      |        ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
